Print index in the doc

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -33,7 +33,7 @@
 %<*driver>
 \documentclass[a4paper]{ltxdoc}
 % \OnlyDescription
-% \CodelineIndex
+\CodelineIndex
 % \RecordChanges
 \begin{document}
 \DocInput{fixme.dtx}
@@ -1616,7 +1616,7 @@
 %    \end{macrocode}
 %
 % ^^A \PrintChanges
-% ^^A \PrintIndex
+% \PrintIndex
 % \Finale
 %
 % ^^A fixme.dtx ends here.
