Fix a number of missing \mbox{}

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -829,6 +829,7 @@
 % \subsubsubsection{\texttt{scrreprt} version}
 % \begin{macro}{\listoffixmes@pretoc@scrreprt}
 %   \begin{macro}{\listoffixmes@posttoc@scrreprt}
+%     \mbox{}
 %    \begin{macrocode}
 \def\@listoffixmes@pretoc@scrreprt{%
   \begingroup%
@@ -851,6 +852,7 @@
 % \subsubsubsection{\texttt{scrbook} version}
 % \begin{macro}{\listoffixmes@pretoc@scrbook}
 %   \begin{macro}{\listoffixmes@posttoc@scrbook}
+%     \mbox{}
 %    \begin{macrocode}
 \def\@listoffixmes@pretoc@scrbook{%
   \begingroup%
@@ -1335,6 +1337,7 @@
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\FXEnvEnd}
+%   \mbox{}
 %    \begin{macrocode}
 \newcommand\FXEnvEnd{\end{quotation}}
 
@@ -1366,6 +1369,7 @@
 % \end{macro}
 % \begin{macro}{\@fxenvend@final}
 %   \begin{macro}{\@fxenvend@draft}
+%     \mbox{}
 %    \begin{macrocode}
 \def\@fxenvend@final{\endcomment}
 \def\@fxenvend@draft{\FXEnvEnd}
